fix(multisite): update native access options for JavaFX and SQLite driver